@@ -5,6 +5,10 @@ Changelog
 1.3.1 (unreleased)
 ------------------
 
+- Display the function of the contact of a member block if the option
+  "Acquire address" is checked on the member block.
+  [mbaechtold]
+
 - Install a newer version of "collective.geo.openlayers". This makes the
   "ftw.openlayerhotfix" obsolete.
   [mbaechtold]
